# nestrs

./: .gitignore  BENCHMARK_STORAGE_PLAYBOOK.md  BENCHMARK_STORAGE_SECRETS_CHECKLIST.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  ECOSYSTEM.md  HARDENING_STATUS.md  LICENSE-APACHE  LICENSE-MIT  MICROSERVICES.md  PHASE5_OPTIONAL_CLOSEOUT.md  PRODUCTION_RUNBOOK.md  README.md  RELEASE.md  SECURITY.md  STABILITY.md  api.py  requirements-vllm-api.txt  rust_out
.cargo/: audit.toml  config.toml
.github/: CODEOWNERS  pull_request_template.md  release-template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit-ignore-review.yml  benchmark-storage-sync.yml  ci.yml  codeql.yml  fuzz.yml  performance.yml  publish-crates.yml  release-version-check.yml  security.yml
benchmarks/: BASELINE.md  relative_thresholds.json  thresholds.json
cargo-fuzz-0.13.1/: .cargo_vcs_info.json  Cargo.toml
docs/: README.md  book.toml
docs/src/: SUMMARY.md  adrs.md  appendix-api-cookbook.md  backend-recipes.md  changelog.md  cli.md  contributing.md  custom-decorators.md  ecosystem.md  first-steps.md  fundamentals.md  graphql-ws-micro-dx.md  http-pipeline-order.md  index.md  microservices.md  nestjs-migration.md  observability.md  openapi-http.md  production.md  release.md  roadmap-parity.md  secure-defaults.md  security.md
examples/hello-app/: Cargo.toml
examples/hello-app/prisma/: schema.prisma
examples/hello-app/src/: main.rs
mintlify-docs/: .atlas-analysis.json  cli.mdx  deployment.mdx  development.mdx  docs.json  index.mdx  installation.mdx  introduction.mdx  quickstart.mdx
mintlify-docs/api/: nest-application.mdx  nest-factory.mdx
mintlify-docs/cli/: generate.mdx  overview.mdx
mintlify-docs/concepts/: controllers.mdx  dependency-injection.mdx  middleware-pipeline.mdx  modules.mdx  providers.mdx
mintlify-docs/ecosystem/: caching.mdx  database.mdx  openapi.mdx  overview.mdx  scheduling.mdx
mintlify-docs/extensions/: database.mdx  graphql.mdx  microservices.mdx  openapi.mdx  websockets.mdx
mintlify-docs/guides/: api-versioning.mdx  graphql-websockets.mdx  microservices.mdx  observability.mdx  security.mdx  testing.mdx  (+2 more)
nestrs/: Cargo.toml  README.md
nestrs-cli/: Cargo.toml  README.md
nestrs-cli/src/: doctor.rs  main.rs  resource_templates.rs
nestrs-cli/tests/: generator_cli.rs
nestrs-core/: Cargo.toml  README.md
nestrs-core/src/: database.rs  discovery.rs  execution_context.rs  guard.rs  lib.rs  metadata.rs  module_ref.rs  pipe.rs  platform.rs  route_registry.rs  strategy.rs
nestrs-cqrs/: Cargo.toml  README.md
nestrs-cqrs/src/: lib.rs
nestrs-cqrs/tests/: basic.rs
nestrs-events/: Cargo.toml  README.md
nestrs-events/src/: lib.rs
nestrs-graphql/: Cargo.toml  README.md
nestrs-graphql/src/: builder_help.rs  lib.rs  limits.rs  router_options.rs  sdl.rs
nestrs-macros/: Cargo.toml  README.md
nestrs-macros/src/: lib.rs
nestrs-microservices/: Cargo.toml  README.md  build.rs
nestrs-microservices/fuzz/: Cargo.toml  README.md
nestrs-microservices/fuzz/fuzz_targets/: wire_json.rs
nestrs-microservices/proto/: nestrs_microservice.proto
nestrs-microservices/src/: custom.rs  grpc.rs  lib.rs  nats.rs  redis.rs  tcp.rs  wire.rs
nestrs-microservices/src/kafka/: connection.rs  live.rs  mod.rs  stub.rs
nestrs-microservices/src/mqtt/: live.rs  mod.rs  stub.rs
nestrs-microservices/src/rabbitmq/: live.rs  mod.rs  stub.rs
nestrs-microservices/tests/: microservices_events.rs  wire_conformance.rs
nestrs-microservices/tests/fixtures/: wire_error_minimal.json  wire_request_emit.json  wire_request_send.json  wire_request_with_reply.json  wire_response_error.json  wire_response_ok.json
nestrs-openapi/: Cargo.toml  README.md
nestrs-openapi/src/: lib.rs
nestrs-prisma/: Cargo.toml  README.md
nestrs-prisma/examples/: quickstart.rs
nestrs-prisma/src/: client.rs  deployment.rs  error.rs  index_ddl.rs  lib.rs  macros.rs  macros_enum.rs  macros_index.rs  macros_relation.rs  macros_where.rs  mapping.rs  query_optimization.rs  relation_queries.rs  relations.rs  schema_bridge.rs  transaction.rs
nestrs-prisma/tests/: prisma_model_client.rs  prisma_module_integration.rs  query_optimization.rs  relation_queries.rs  relations_macros.rs  transaction_batch.rs
nestrs-ws/: Cargo.toml  README.md
nestrs-ws/src/: adapters.rs  lib.rs
nestrs/benches/: di_resolution.rs  json_validation_hot_path.rs  router_hot_path.rs  router_middleware_stack.rs
nestrs/fuzz/: Cargo.toml  README.md
nestrs/fuzz/fuzz_targets/: authorization_bearer.rs  uri_path_json.rs
nestrs/src/: cache.rs  client_ip.rs  config.rs  database_sqlx.rs  exception_filter.rs  files.rs  http_client.rs  http_execution_context.rs  i18n.rs  interceptor.rs  lib.rs  microservice_health.rs  mongo.rs  multipart.rs  mvc.rs  otel.rs  pipes.rs  problem.rs  queues.rs  raw_body.rs  request_context.rs  request_scoped.rs  schedule.rs  serialization.rs  sse.rs  testing.rs  versioning.rs
nestrs/src/security/: auth.rs  csrf.rs  mod.rs
nestrs/tests/: api_version_negotiation.rs  bootstrap_composition.rs  cache_redis_backend.rs  config_module.rs  configurable_modules.rs  controller_guards.rs  cross_cutting_extended.rs  cross_cutting_ordering_contract.rs  csrf_middleware.rs  dto_unknown_fields.rs  dynamic_modules.rs  forward_ref_modules.rs  fundamentals_nest_parity.rs  graphql_sdl_export.rs  i18n_module.rs  integration_matrix.rs  lifecycle_hooks.rs  metadata_roles_guard.rs  microservices_tcp_integration.rs  module_exports.rs  multipart_upload.rs  mvc_reinitialization.rs  openapi_integration.rs  param_decorators_and_pipes.rs  queues_module.rs  raw_body_support.rs  request_scope.rs  routes_interceptors_filters.rs  routes_macro.rs  schedule_module.rs  serialization_support.rs  sse_support.rs  static_assets.rs  testing_module.rs  tracing_configure.rs  versioning_routes.rs  ws_cross_cutting.rs  ws_gateway_smoke.rs
nestrs/tests/common/: mod.rs
website/: docs.html  index.html  mdx-components.tsx  next.config.ts  package-lock.json  package.json  tailwind.config.ts
(+198 files in other folders)
