[package]
# crates.io: `nestrs-cli` is taken by another owner; install with `cargo install nestrs-scaffold` (binary: `nestrs`).
name = "nestrs-scaffold"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "CLI generator and scaffolding tooling for nestrs."
keywords = ["cli", "scaffold", "nest", "generator", "axum"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde_json = "1"

[[bin]]
name = "nestrs"
path = "src/main.rs"
