[package]
name = "nestrs-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Runtime primitives and traits for the nestrs framework."
keywords = ["nest", "axum", "context", "di", "tower"]
categories = ["web-programming", "asynchronous"]

[features]
default = []
## Clears process-global registries (`RouteRegistry`, `MetadataRegistry`). For **tests and benches only**;
## see `STABILITY.md` in the workspace root. Never enable in production binaries.
test-hooks = []

[dependencies]
axum.workspace = true
async-trait = "0.1"
serde_json = "1"
tokio.workspace = true
