[package]
name = "nestrs-cqrs"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "CQRS primitives for nestrs."
keywords = ["cqrs", "commands", "queries", "events", "nest"]
categories = ["asynchronous"]

[dependencies]
nestrs-core = { version = "0.3.6", path = "../nestrs-core" }
axum.workspace = true
tokio.workspace = true
async-trait = "0.1"

