[package]
name = "nestrs-events"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "In-process event bus for nestrs (Nest-style @OnEvent analogue)."

[dependencies]
async-trait = "0.1"
nestrs-core = { version = "0.1.2", path = "../nestrs-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
