[package]
name = "nestrs-graphql"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "GraphQL extension crate for nestrs."
keywords = ["graphql", "nest", "axum", "async", "api"]
categories = ["web-programming", "network-programming"]

[dependencies]
async-graphql = "=7.0.17"
async-graphql-derive = "=7.0.17"
async-graphql-parser = "=7.0.17"
async-graphql-value = "=7.0.17"
axum.workspace = true
