[package]
name = "nestrs-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Proc-macro support for nestrs module/controller/route ergonomics."
keywords = ["nest", "macros", "proc-macro", "axum", "derive"]
categories = ["development-tools::procedural-macro-helpers", "web-programming"]

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
