[package]
name = "nestrs-openapi"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "OpenAPI extension crate for nestrs."
keywords = ["openapi", "swagger", "nest", "axum", "api"]
categories = ["web-programming", "api-bindings"]

[dependencies]
axum.workspace = true
nestrs-core = { version = "0.3.3", path = "../nestrs-core" }
serde_json = "1"
