[package]
name = "nestrs-prisma"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Prisma integration helpers and providers for nestrs."
keywords = ["prisma", "database", "nest", "orm", "axum"]
categories = ["database", "web-programming"]

[features]
default = []
# Real DB connectivity via SQLx using `DATABASE_URL` / `PrismaOptions`.
sqlx = ["dep:sqlx", "dep:tokio"]
# Select a concrete SQLx database backend used by generated repositories.
sqlx-sqlite = ["sqlx"]
sqlx-postgres = ["sqlx"]
sqlx-mysql = ["sqlx"]
# Optional column types for `prisma_model!` (enable matching features on sqlx).
chrono = ["dep:chrono", "sqlx?/chrono"]
uuid = ["dep:uuid", "sqlx?/uuid"]

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", optional = true, default-features = false, features = ["clock"] }
nestrs = { version = "0.3.5", path = "../nestrs" }
axum.workspace = true
paste = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { workspace = true, optional = true }
uuid = { version = "1", optional = true, features = ["v4"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls-ring", "sqlite", "postgres", "mysql", "derive"], optional = true }

[dev-dependencies]
async-trait = "0.1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls-ring", "sqlite", "postgres", "mysql", "derive"] }
tokio.workspace = true
tower = { version = "0.5", features = ["util"] }
