[package]
name = "nestrs-ws"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "WebSocket extension crate for nestrs."
keywords = ["websocket", "axum", "nest", "tower", "async"]
categories = ["network-programming", "web-programming", "asynchronous"]

[dependencies]
async-trait = "0.1"
axum = { workspace = true, features = ["ws"] }
tokio.workspace = true
futures-util = { version = "0.3", features = ["sink"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
