[package]
name = "nestrs"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "NestJS-like API framework for Rust on top of Axum and Tower."
keywords = ["axum", "tower", "nest", "di", "web"]
categories = ["web-programming", "asynchronous", "network-programming"]

[features]
default = []
microservices = ["dep:nestrs-microservices"]
ws = ["dep:nestrs-ws"]
graphql = ["dep:nestrs-graphql"]
openapi = ["dep:nestrs-openapi"]

[dependencies]
axum.workspace = true
tokio.workspace = true
nestrs-core = { version = "0.1.0", path = "../nestrs-core" }
nestrs-macros = { version = "0.1.0", path = "../nestrs-macros" }
nestrs-microservices = { version = "0.1.0", path = "../nestrs-microservices", optional = true }
nestrs-ws = { version = "0.1.0", path = "../nestrs-ws", optional = true }
nestrs-graphql = { version = "0.1.0", path = "../nestrs-graphql", optional = true }
nestrs-openapi = { version = "0.1.0", path = "../nestrs-openapi", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = { version = "0.18", features = ["derive"] }
tower = { version = "0.5", features = ["limit", "load-shed"] }
tower-http = { version = "0.6", features = ["cors", "set-header", "limit", "request-id", "compression-gzip", "decompression-gzip", "normalize-path"] }
async-trait = "0.1"
metrics = "0.24"
# Recorder + render only; we expose `/metrics` via Axum (no built-in hyper listener / push gateway).
metrics-exporter-prometheus = { version = "0.18", default-features = false }
tracing = "=0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

[dev-dependencies]
flate2 = "1"
tower = { version = "0.5", features = ["util"] }
serial_test = "3"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "router_hot_path"
harness = false

[[bench]]
name = "router_middleware_stack"
harness = false
