[package]
name = "nestrs-microservices-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"
nestrs-microservices = { path = ".." }

[[bin]]
name = "wire_json"
path = "fuzz_targets/wire_json.rs"
test = false
doc = false
bench = false

[workspace]

[profile.release]
debug = 1
